--- a/home.html
+++ b/home.html
@@ -5,51 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ATS Style Navigation</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">    
+    <link rel="Icon" href="main/ATSw.png">
 </head>
 
 <body>
+    
     <header>
-        <nav>
-            <div class="top-nav">
-                <div class="navigations-1">
-                    <a href="#">Engage ATS</a>
-                    <span>|</span>
-                    <a href="#">Canvas</a>
-                    <span>|</span>
-                    <a href="#">Contact Us</a>
-                    <span class="social-icons">
-                        <a href="#"><img src="nav/facebook.png" alt="fb"></a>
-                        <a href="#"><img src="nav/twitter.png" alt="tw"></a>
-                        <a href="#"><img src="nav/vimeo.png" alt="vimeo"></a>
-                        <a href="#"><img src="nav/youtube.png" alt="yt"></a>
-                    </span>
-                    <a class="btn-home" href="#">ATS Home Page</a>
-                    <a class="btn-discover" href="#">Discover Our Schools</a>
-                </div>
-            </div>
-
-            <div class="bottom-nav">
-                <div class="navigations-2">
-                    <div class="logo">
-                        <img src="main/ATS.png" alt="ATS Logo" />
-                    </div>
-                     <a class="mob-search-icon"><img src="nav/search.png" alt="search" ></a>
-                    <button class="menubtn" onclick="toggleMobileMenu()">☰</button>
-                    <ul class="nav-links" id="navMenu">
-                        <li><a href="#">Who We Are</a></li>
-                        <li><a href="#">Membership</a></li>
-                        <li><a href="#">Accreditation</a></li>
-                        <li><a href="#">Resources</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li class="search-icon"><img src="nav/search.png" alt="search" ></li>
-                        <a class="mob-btn-discover" href="#">Discover Our Schools</a>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <div id="mainnav"></div>
     </header>
-
 
     <main>
         <div class="slideshow-container">
@@ -91,26 +55,25 @@
 
         <section class="cards-section">
             <div class="cards-section-div">
-                <div class="card">
+                <div class="card card-1">
                     <img src="main/Membership.png" alt="Membership Icon">
                     <h3>Membership</h3>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
 
-                <div class="card">
+                <div class="card card-2">
                     <img src="main/Accreditation.png" alt="Accreditation Icon">
                     <h3>Accreditation</h3>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
 
-                <div class="card">
+                <div class="card card-3">
                     <img src="main/Resources.png" alt="Resources Icon">
                     <h3>Resources</h3>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
             </div>
         </section>
-
 
         <section class="news-section">
             <div class="news-container">
@@ -241,69 +204,14 @@
                 </div>
             </div>
         </section>
-
     </main>
 
     <footer>
-        <div class="footer-overlay">
-            <div class="footer-top">
-                <div class="footer-header">
-                    <div class="footer-logo-icon">
-                        <img src="main/ATSw.png" alt="ATS Logo" class="footer-logo" />
-                        <div class="footer-icons">
-                            <a href="#"><img src="footer/facebook.png" alt="FB" /></a>
-                            <a href="#"><img src="footer/twitter.png" alt="Twitter" /></a>
-                            <a href="#"><img src="footer/vimeo.png" alt="Vimeo" /></a>
-                            <a href="#"><img src="footer/youtube.png" alt="YouTube" /></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="footer-columns">
-                    <div class="footer-col">
-                        <p><strong>The Association of Theological Schools</strong></p>
-                        <p>10 Summit Park Drive<br>Pittsburgh PA 15275-1110</p>
-                        <p><a href="#" class="footer-phone">412-788-6505</a></p>
-                        <p><a href="#" class="footer-email">communications@ats.edu</a></p>
-                    </div>
-
-                    <div class="footer-col">
-                        <p><a href="#">Who We Are</a></p>
-                        <p><a href="#">Membership</a></p>
-                        <p><a href="#">Accreditation</a></p>
-                        <p><a href="#">Resources</a></p>
-                        <p><a href="#">Events</a></p>
-                    </div>
-
-                    <div class="footer-col">
-                        <p><a href="#">Find a School</a></p>
-                        <p><a href="#">Engage ATS</a></p>
-                        <p><a href="#">Canvas</a></p>
-                        <p><a href="#">Privacy Policy</a></p>
-                        <p><a href="#">Staff</a></p>
-                    </div>
-
-                    <div class="footer-col subscribe">
-                        <p><strong><em>Colloquy Online<br>(member newsletter)</em></strong></p>
-                        <input type="text" placeholder="Name" />
-                        <input type="email" placeholder="Email" />
-                        <span class="subscribe-btn">
-                            <button>Subscribe</button>
-                        </span>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="footer-bottom">
-            <div class="footer-bottom-inner">
-                <p>© 2025 The Association of Theological Schools, All Rights Reserved</p>
-            </div>
-        </div>
-
+        <div id="mainfooter"></div>     
     </footer>
+
     <script src="script.js"></script>
+
 </body>
 
 </html>
