--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ATS Style Navigation</title>
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="style.css">    
     <link rel="Icon" href="main/ATSw.png">
 </head>
