--- a/About-ATS.html
+++ b/About-ATS.html
@@ -1,30 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About ATS</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="Icon" href="main/ATSw.png">
 </head>
+
 <body>
-     <header>
+    <header>
         <div id="mainnav"></div>
     </header>
-    
+    <main>
+        <div class="banner">
+            <img src="main/Events (1).jpg" alt="Events Banner">
+            <div class="banner-content">
+                <h1>Our Mission</h1>
+                <p>To promote the improvement and enhancement of theological schools to the benefit of communities of
+                    faith and the broader public.</p>
+            </div>
+        </div>
 
+        <section class="heading-outer">
+            <div class="heading-inner">
+                <div class="heading">
+                    <div class="heading-text">
+                        <h2 class="heading-title">About ATS</h2>
+                        <p class="heading-description">More than 270 graduate schools of theology in the United States
+                            and
+                            Canada form The Association
+                            of Theological Schools. Member schools conduct post-baccalaureate professional and academic
+                            degree programs to educate persons for the practice of ministry and for teaching and
+                            research in
+                            the theological disciplines. These schools differ from one another in deep and significant
+                            ways
+                            but, through their membership in ATS, they demonstrate a commitment to shared values about
+                            what
+                            constitutes good theological education.</p>
+                    </div>
+                    <div class="heading-text">
+                        <h3>One Mission</h3>
+                        <p class="heading-description">To promote the improvement and enhancement of theological schools
+                            to
+                            the
+                            benefit of communities
+                            of faith and the broader public.</p>
+                    </div>
+                </div>
+                <div class="heading-text">
+                    <h3>Two Separate Corporations</h3>
+                    <div class="corporations-container">
+                        <div class="corporation">
+                            <h4>The Association of Theological Schools</h4>
+                            <p class="corporation-description">The Association provides a host of programs, services,
+                                research, and other resources to
+                                support the work of administrators and faculty at member schools.</p>
+                            <ul class="corporation-list">
+                                <a>
+                                    <li class="corporation-list-item">Association Bylaws</li>
+                                </a>
+                                <a>
+                                    <li class="corporation-list-item">Association Policy Guidelines</li>
+                                </a>
+                            </ul>
+                        </div>
+                        <div class="corporation">
+                            <h4>The Commission on Accrediting</h4>
+                            <p class="corporation-description">The Commission on Accrediting of ATS accredits
+                                institutions
+                                and approves degree programs
+                                offered by accredited schools.</p>
+                            <ul class="corporation-list">
+                                <a>
+                                    <li class="corporation-list-item">Commission Bylaws</li>
+                                </a>
+                                <a>
+                                    <li class="corporation-list-item">Commission Policies and Procedures</li>
+                                </a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
 
+            <div class="heading-outer-2">
+                <div class="heading-inner">
+                    <div class="heading-text">
+                        <h2 class="heading-title">Levels of Membership</h2>
+                        <p class="heading-description">Membership is open to schools located in the United States and
+                            Canada
+                            that offer graduate
+                            theological degrees, are demonstrably engaged in educating professional leadership for
+                            communities of the Christian and Jewish faiths, and meet the standards and criteria for
+                            membership established by the Association and the Commission. The current member schools,
+                            include Protestant, Roman Catholic, Orthodox, and Jewish graduate schools of theology that
+                            reflect a broad spectrum of doctrinal, ecclesiastical, and theological perspectives.</p>
 
+                        <div class="membership-levels">
+                            <div class="membership-level">
+                                <div class="membership-level-header">
+                                    <div class="membership-level-number">
+                                        <h2>1</h2>
+                                    </div>
+                                    <h4>Associate Members</h4>
+                                </div>
+                                <p class="membership-level-description">Schools initially join the Association as
+                                    Associate
+                                    Members upon a vote by the membership
+                                    at its Biennial Meeting in even-numbered years.</p>
+                            </div>
+                            <div class="membership-level">
+                                <div class="membership-level-header">
+                                    <div class="membership-level-number">
+                                        <h2>2</h2>
+                                    </div>
+                                    <h4>Accredited Members</h4>
+                                </div>
+                                <p class="membership-level-description">Within five years, Associate members are
+                                    expected to
+                                    achieve initial accreditation with
+                                    the Commission on Accrediting, which makes them Accredited Members of the
+                                    Commission.
+                                </p>
+                            </div>
+                        </div>
+                        <button class="membership-process-btn">Membership Process</button>
+                    </div>
+                </div>
+        </section>
 
+        <section class="Core-values">
+            <div class="Core-values-carts-1">
+                <div class="Core-values-text-1">
+                    <div class="Core-values-text-inner">
+                        <h2 class="heading-title">Core Values</h2>
+                        <div class="Core-values-header">
+                            <div class="Core-values-number">
+                            <h2>1</h2>
+                        </div>
+                        <h3>Diversity</h3>
+                        </div>
+                        <p>ATS is committed to diversity that is a visible sign of God’s intention for humanity. The
+                            Association values the multiple forms of diversity that exist among the member schools and
+                            encourages each school to continuously define and demonstrate its own commitment to
+                            diversity within the context of its mission, history, constituency, educational practices,
+                            structures, and theological commitments.</p>
+                    </div>
+                </div>
+                <div class="Core-values-img"><img src="main/hero (1).jpg" class="Core-img"></div>
+            </div>
+            <div class="Core-values-carts-2">
+                <div class="Core-values-img"><img src="main/hero (1).jpg" class="Core-img"></div>
+                <div class="Core-values-text-2">
+                    <div class="Core-values-text-inner">
+                        <div class="Core-values-header">
+                            <div class="Core-values-number">
+                            <h2>2</h2>
+                        </div>
+                        <h3>Quality and Improvement</h3>
+                        </div>
+                        <p>ATS schools value quality in the practice of ministry and in educational practices. Quality is always linked to improvement; even schools that have achieved a high degree of quality can improve. The Association encourages schools to advance in quality.</p>
+                    </div>
+                </div>                
+            </div>
+             <div class="Core-values-carts-1">
+                <div class="Core-values-text-1">
+                    <div class="Core-values-text-inner">
+                        <div class="Core-values-header">
+                            <div class="Core-values-number">
+                            <h2>3</h2>
+                        </div>
+                        <h3>Collegiality</h3>
+                        </div>
+                        <p>ATS values the contributions that schools make to one another. Regardless of differences in theological perspective, organizational complexity, or institutional size, ATS schools, as peer institutions, can learn from one another, cooperate on common tasks that benefit the broader community of theological schools, and hold themselves accountable to common practices and quality.</p>
+                    </div>
+                </div>
+                <div class="Core-values-img"><img src="main/hero (1).jpg" class="Core-img"></div>
+            </div>
+            <div class="Core-values-carts-2">
+                <div class="Core-values-img"><img src="main/hero (1).jpg" class="Core-img"></div>
+                <div class="Core-values-text-2">
+                    <div class="Core-values-text-inner">
+                        <div class="Core-values-header">
+                            <div class="Core-values-number">
+                            <h2>4</h2>
+                        </div>
+                        <h3>Leadership</h3>
+                        </div>
+                        <p>ATS values leadership and considers it essential for schools to attain their missions. ATS is committed to developing the skills and capacities of administrators, faculties, and boards of member schools.</p>
+                    </div>
+                </div>                
+            </div>
+        </section>
+        <section class="last-section">
+            <p>In addition to these core values, the Association values formal education for ministerial leadership and advocates on behalf of its benefits for religious leaders, religious institutions, and the work of religion in broader publics; values justice in society and institutions and seeks to embody justice in its organizational life; values accountability for student learning; and both values and advocates for quality in the practice of ministry.</p>
+        </sec>
+        
+    </main>
 
-
-
-
-      <footer>
-        <div id="mainfooter"></div>     
+    <footer>
+        <div id="mainfooter"></div>
     </footer>
     <script src="script.js"></script>
+
 </body>
+
 </html>
