--- a/Events.html
+++ b/Events.html
@@ -1,30 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="event.css">
     <link rel="Icon" href="main/ATSw.png">
+    
 </head>
+
 <body>
-     <header>
+    <header>
         <div id="mainnav"></div>
     </header>
-    
 
+    <main>
+        <div class="banner">
+            <img src="main/event.jpg" alt="Events Banner">
+            <h1>Events</h1>
+        </div>
 
+        <div class="upcoming-events">
+            <div class="events-inner">
+                <div class="events-header">
+                    <h2>Upcoming Events</h2>
+                </div>
 
+                <div class="card-container">
+                    <div class="events-slider">
+                        <div class="event-card">
+                            <div class="event-date">
+                                <div class="day">15</div>
+                                <div class="month">Sep 2025</div>
+                                <div class="thru">(THRU SEPT 16)</div>
+                            </div>
+                            <img src="main/Events (1).jpg" class="event-image" alt="Event 1" />
+                            <div class="event-content">
+                                <h3>2025 ATS School for New Deans</h3>
+                                <p>Designed for those new to the role of dean, this event will focus on sharing key
+                                    resources, exploring common challenges, connecting with new colleagues, and
+                                    reflecting
+                                    on the vocation of academic leadership.</p>
+                                <a href="#" class="learn-btn">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="event-card">
+                            <div class="event-date">
+                                <div class="day">15</div>
+                                <div class="month">Oct 2025</div>
+                                <div class="thru">(THRU OCT 16)</div>
+                            </div>
+                            <img src="main/Events (2).jpg" class="event-image" alt="Event 2" />
+                            <div class="event-content">
+                                <h3>2025 ATS Technology in Theological Education Group Gathering</h3>
+                                <p>Designed for technology professionals and educational technologists who serve ATS
+                                    schools, this gathering will allow participants to engage in conversation and peer
+                                    learning around their work.</p>
+                                <a href="#" class="learn-btn">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="event-card">
+                            <div class="event-date">
+                                <div class="day">11</div>
+                                <div class="month">Nov 2025</div>
+                                <div class="thru">(THRU NOV 13)</div>
+                            </div>
+                            <img src="main/Events (3).jpg" class="event-image" alt="Event 3" />
+                            <div class="event-content">
+                                <h3>2025 ATS Financial Officers Conference</h3>
+                                <p>Designed for finance professionals across ATS schools, this conference will focus on
+                                    sustainability amidst change at member institutions.</p>
+                                <a href="#" class="learn-btn">Learn More</a>
+                            </div>
+                        </div>
 
+                        <div class="event-card">
+                            <div class="event-date">
+                                <div class="day">15</div>
+                                <div class="month">Sep 2025</div>
+                                <div class="thru">(THRU SEPT 16)</div>
+                            </div>
+                            <img src="main/event 4.jpg" class="event-image" alt="Event 1" />
+                            <div class="event-content">
+                                <h3>2025 ATS School for New Deans</h3>
+                                <p>Designed for those new to the role of dean, this event will focus on sharing key
+                                    resources, exploring common challenges, connecting with new colleagues, and
+                                    reflecting
+                                    on the vocation of academic leadership.</p>
+                                <a href="#" class="learn-btn">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="event-card">
+                            <div class="event-date">
+                                <div class="day">15</div>
+                                <div class="month">Oct 2025</div>
+                                <div class="thru">(THRU OCT 16)</div>
+                            </div>
+                            <img src="main/event 5.jpg" class="event-image" alt="Event 2" />
+                            <div class="event-content">
+                                <h3>2025 ATS Technology in Theological Education Group Gathering</h3>
+                                <p>Designed for technology professionals and educational technologists who serve ATS
+                                    schools, this gathering will allow participants to engage in conversation and
+                                    peer
+                                    learning around their work.</p>
+                                <a href="#" class="learn-btn">Learn More</a>
+                            </div>
+                        </div>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
-
-
-      <footer>
-        <div id="mainfooter"></div>     
+    <footer>
+        <div id="mainfooter"></div>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
