--- a/Membership.html
+++ b/Membership.html
@@ -1,30 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Membership</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="membership.css">
     <link rel="Icon" href="main/ATSw.png">
 </head>
+
 <body>
-     <header>
+    <header>
         <div id="mainnav"></div>
     </header>
-    
+
+    <section class="banner">
+        <img src="main/Membership.jpg" alt="Hero Image">
+        <h1>Membership</h1>
+    </section>
+    <section class="cards-section">
+        <div class="cards-section-div">
+            <div class="card">
+                <img src="main/Membership/Membership Process (1).png" class="card-img-1" alt="Membership Icon">
+                <img src="main/Membership/Membership Process (2).png" class="card-img-2" alt="Membership Icon">
+                <h4>Membership Process</h4>
+            </div>
+
+            <div class="card">
+                <img src="main/Membership/Affiliates (1).png" class="card-img-1" alt="Membership Icon">
+                <img src="main/Membership/Affiliates (2).png" class="card-img-2" alt="Membership Icon">
+                <h4>Affiliates</h4>
+            </div>
+
+            <div class="card">
+                <img src="main/Membership/Update Member Information (1).png" class="card-img-1" alt="Membership Icon">
+                <img src="main/Membership/Update Member Information (2).png" class="card-img-2" alt="Membership Icon">
+                <h4>Update Member Information</h4>
+            </div>
+            <div class="card">
+                <img src="main/Membership/Discover Our Schools (1).png" class="card-img-1" alt="Membership Icon">
+                <img src="main/Membership/Discover Our Schools (2).png" class="card-img-2" alt="Membership Icon">
+                <h4>Discover Our Schools</h4>
+            </div>
+        </div>
+    </section>
+
+    <section class="membership-outer">
+        <div class="membership-inner">
+            <div class="heading">
+                <div class="heading-text">
+                    <h2 class="heading-title">Member Schools</h2>
+                    <p class="heading-description">The member schools of The Association of Theological Schools in the
+                        United States and Canada (ATS) and the Commission on Accrediting of ATS are graduate schools of
+                        theology that educate persons for the practice of ministry, for a range of church-related
+                        professions, and for teaching and research in the theological disciplines. They include
+                        Protestant, Roman Catholic, Orthodox, and Jewish graduate schools of theology and reflect a
+                        broad spectrum of doctrinal, ecclesiastical, and theological perspectives.</p>
+                    <p class="heading-description">Accredited schools are members of both ATS and the Commission.
+                        Associate member schools are members only of ATS. Associate members have met the membership
+                        eligibility criteria and have been elected to a five-year term of membership by the member
+                        schools of the Association. Degree programs are not approved by the Commission until a school
+                        has attained accreditation.</p>
+                </div>
+            </div>
+            <img src="main/hero (2).jpg" alt="Membership Image" class="membership-image">
+        </div>
+        <div class="membership-inner-2">
+            <div class="heading">
+                <div class="heading-text">
+                    <h2 class="heading-title">Membership Benefits</h2>
+                </div>
+                <div class="membership-benefits">
+                    <div class="benefits-image">
+                        <img src="main/Membership/benefits ats.jpg">
+                        <p>Click the brochure to learn more!</p>
+                    </div>
+                    <div class="benefits-text">
+                        <ul>
+                            <li>Maintain best practices under newly redeveloped accrediting standards</li>
+                            <li>Obtain institutional data specific to your school not offered anywhere else</li>
+                            <li>Join an organization that encourages hybrid learning from, for, and with its members
+                            </li>
+                            <li>Attend events specific to your area of work</li>
+                            <li>Connect on <a>Engage ATS</a>—an online customized community for peer networking among
+                                member
+                                schools</li>
+                            <li>Access current research trends and findings on theological education</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="membership-outer-3">
+     
+            <div class="membership-inner-3">
+            <div class="heading-3">
+                <div class="heading-text-3">
+                    <h2 class="heading-title-3">Member Schools</h2>
+                    <p class="heading-description-3">The ATS membership welcomes schools in the Christian and Jewish faiths, and includes the full range of Christian denominations—including schools in mainline and evangelical Protestant and Roman Catholic and Orthodox traditions—as well as multidenominational and nondenominational schools. Schools representing other faiths and other organizations interested in theological education may become affiliates of ATS.</p>
+                    <button class="membership-button">Learn More</button>
+                </div>
+                <img src="main/hero (3).jpg" alt="Membership Image" class="membership-image-3">
+            </div>
+            </div>
+
+        </div>
+
+    </section>
 
 
-
-
-
-
-
-
-      <footer>
-        <div id="mainfooter"></div>     
+    <footer>
+        <div id="mainfooter"></div>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
