--- a/Resources.html
+++ b/Resources.html
@@ -1,30 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="resources.css">
     <link rel="Icon" href="main/ATSw.png">
 </head>
+
 <body>
-     <header>
+    <header>
         <div id="mainnav"></div>
     </header>
-    
 
+    <section class="banner">
+        <img src="main/Resources.jpeg" alt="Hero Image">
+        <h1>Resources</h1>
+    </section>
+    <section class="cards-section">
+        <div class="cards-section-div">
+            <div class="card">
+                <img src="main/Resources/Administrators and Faculty (1).png" alt="Resources Icon" class="card-img-1">
+                <img src="main/Resources/Administrators and Faculty (2).png" alt="Resources Icon" class="card-img-2">
+                <h4>Administrators and Faculty</h4>
+            </div>
 
+            <div class="card">
+                <img src="main/Resources/Research and Data (1).png" alt="Resources Icon" class="card-img-1">
+                <img src="main/Resources/Research and Data (2).png" alt="Resources Icon" class="card-img-2">
+                <h4>Research and Data</h4>
+            </div>
 
+            <div class="card">
+                <img src="main/Resources/Publications (1).png" alt="Resources Icon" class="card-img-1">
+                <img src="main/Resources/Publications (2).png" alt="Resources Icon" class="card-img-2">
+                <h4>Publications</h4>
+            </div>
+            <div class="card">
+                <img src="main/Resources/Initiatives (1).png" alt="Resources Icon" class="card-img-1">
+                <img src="main/Resources/Initiatives (2).png" alt="Resources Icon" class="card-img-2">
+                <h4>Initiatives</h4>
+            </div>
+        </div>
+    </section>
 
+    <section class="resources-outer">
+        <div class="resources-inner">
+            <div class="heading">
+                <div class="heading-text">
+                    <h2 class="heading-title">Overview of Resources</h2>
+                    <p class="heading-description">ATS resources include <a>Engage ATS</a> (an online interactive
+                        community for those who work at ATS member schools), events, research findings, and a variety of
+                        other materials that address trends and best practices in theological education, as well as
+                        databases full of statistics about member schools and their students.</p>
 
+                    <p class="heading-description"> <a>Annual Report Forms</a> that member schools complete each fall
+                        provide extensive data about the member schools that are reported in the <a>Annual Data
+                            Tables</a> on this website. These data are also the basis for two statistical reports to
+                        assist schools in strategic planning, institutional evaluation, and policy development: the
+                        <a>Institutional Peer Profile Report</a> and the <a>Strategic Information Report</a>.</p>
 
+                    <p class="heading-description">The Association also maintains a database on student perceptions of
+                        their theological education through the <a>Entering and Graduating Student Questionnaires</a>.
+                    </p>
 
+                    <p class="heading-description"> The <a>ATS research function</a>, a strategic priority of the
+                        Association’s work plan, ensures that all of the basic institutional and student data above are
+                        accessible and comprehensible to the membership and the public. </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-      <footer>
-        <div id="mainfooter"></div>     
+    <footer>
+        <div id="mainfooter"></div>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
