--- a/header.html
+++ b/header.html
@@ -20,8 +20,8 @@
                         <a href="#"><img src="nav/vimeo.png" alt="vimeo"></a>
                         <a href="#"><img src="nav/youtube.png" alt="yt"></a>
                     </span>
-                    <a class="btn-home" href="#">ATS Home Page</a>
-                    <a class="btn-discover" href="home.html">Discover Our Schools</a>
+                    <a class="btn-home" href="home.html">ATS Home Page</a>
+                    <a class="btn-discover" href="#">Discover Our Schools</a>
                 </div>
             </div>
 
