--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
         <div class="footer-top">
             <div class="footer-header">
                 <div class="footer-logo-icon">
-                    <a href="home.html">
+                    <a href="index.html">
                     <img src="main/ATSw.png" alt="ATS Logo" class="footer-logo" />
                     </a>
                     <div class="footer-icons">
