--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
                         <a href="#"><img src="nav/vimeo.png" alt="vimeo"></a>
                         <a href="#"><img src="nav/youtube.png" alt="yt"></a>
                     </span>
-                    <a class="btn-home" href="home.html">ATS Home Page</a>
+                    <a class="btn-home" href="index.html">ATS Home Page</a>
                     <a class="btn-discover" href="#">Discover Our Schools</a>
                 </div>
             </div>
@@ -28,7 +28,7 @@
             <div class="bottom-nav">
                 <div class="navigations-2">
                     <div class="logo">
-                        <a href="home.html">
+                        <a href="index.html">
                         <img src="main/ATS.png" alt="ATS Logo" />
                         </a>
                     </div>
@@ -41,7 +41,7 @@
                         <li><a href="Resources.html">Resources</a></li>
                         <li><a href="Events.html">Events</a></li>
                         <li class="search-icon"><img src="nav/search.png" alt="search" ></li>
-                        <a class="mob-btn-discover" href="home.html">Discover Our Schools</a>
+                        <a class="mob-btn-discover" href="index.html">Discover Our Schools</a>
                     </ul>
                 </div>
             </div>
