--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
                     <span>|</span>
                     <a href="#">Canvas</a>
                     <span>|</span>
-                    <a href="#">Contact Us</a>
+                    <a href="contact-us.html">Contact Us</a>
                     <span class="social-icons">
                         <a href="#"><img src="nav/facebook.png" alt="fb"></a>
                         <a href="#"><img src="nav/twitter.png" alt="tw"></a>
