--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>ATS Style Navigation</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
     <link rel="Icon" href="main/ATSw.png">
 </head>
 
 <body>
-    
+
     <header>
         <div id="mainnav"></div>
     </header>
@@ -58,19 +58,22 @@
         <section class="cards-section">
             <div class="cards-section-div">
                 <div class="card card-1">
-                    <img src="main/Membership.png" alt="Membership Icon">
+                    <img src="main/Membership.png" alt="Membership Icon" class="card-img-1">
+                    <img src="hover/Membership.png" alt="Membership Icon" class="card-img-2">
                     <h3>Membership</h3>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
 
                 <div class="card card-2">
-                    <img src="main/Accreditation.png" alt="Accreditation Icon">
+                    <img src="main/Accreditation.png" alt="Accreditation Icon" class="card-img-1">
+                    <img src="hover/Accreditation.png" alt="Accreditation Icon" class="card-img-2">
                     <h3>Accreditation</h3>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
 
                 <div class="card card-3">
-                    <img src="main/Resources.png" alt="Resources Icon">
+                    <img src="main/Resources.png" alt="Resources Icon" class="card-img-1">
+                    <img src="hover/Resources.png" alt="Resources Icon" class="card-img-2">
                     <h3>Resources</h3>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
@@ -209,7 +212,7 @@
     </main>
 
     <footer>
-        <div id="mainfooter"></div>     
+        <div id="mainfooter"></div>
     </footer>
 
     <script src="script.js"></script>
