--- a/index.html
+++ b/index.html
@@ -57,26 +57,26 @@
 
         <section class="cards-section">
             <div class="cards-section-div">
-                <div class="card card-1">
+                <a class="card card-1" href="Membership.html">
                     <img src="main/Membership.png" alt="Membership Icon" class="card-img-1">
                     <img src="hover/Membership.png" alt="Membership Icon" class="card-img-2">
                     <h3>Membership</h3>
-                    <a href="#" class="card-link">Learn More</a>
-                </div>
+                    <p href="#" class="card-link card-link-1">Learn More</p>
+                </a>
 
-                <div class="card card-2">
+                <a class="card card-2" href="Accreditation.html">
                     <img src="main/Accreditation.png" alt="Accreditation Icon" class="card-img-1">
                     <img src="hover/Accreditation.png" alt="Accreditation Icon" class="card-img-2">
                     <h3>Accreditation</h3>
-                    <a href="#" class="card-link">Learn More</a>
-                </div>
+                    <p href="#" class="card-link card-link-2">Learn More</p>
+                </a>
 
-                <div class="card card-3">
+                <a class="card card-3" href="Events.html">
                     <img src="main/Resources.png" alt="Resources Icon" class="card-img-1">
                     <img src="hover/Resources.png" alt="Resources Icon" class="card-img-2">
                     <h3>Resources</h3>
-                    <a href="#" class="card-link">Learn More</a>
-                </div>
+                    <p href="#" class="card-link card-link-3">Learn More</p>
+                </a>
             </div>
         </section>
 
